--- a/pom.xml
+++ b/pom.xml
@@ -318,6 +318,12 @@
 		    <artifactId>classgraph</artifactId>
 		    <version>4.8.175</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.d2ab/sequence -->
+		<dependency>
+		    <groupId>org.d2ab</groupId>
+		    <artifactId>sequence</artifactId>
+		    <version>2.3.0</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
