Add "getPreferredSize(java.awt.Component)" and "setMaximumSize(Component,java.awt.Dimension)" methods in "org.springframework.context.support.VoiceManagerPdfPanel" class Add "org.springframework.context.support.VoiceManagerPdfPanel.fontSize2" property in "/src/main/resources/configuration.properties" file Add "tfFontSize2" field in "org.springframework.context.support.VoiceManagerPdfPanel" class Update "actionPerformed(java.awt.event.ActionEvent)" and "afterPropertiesSet()" methods in "org.springframework.context.support.VoiceManagerPdfPanel" class

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -156,4 +156,5 @@ org.springframework.beans.factory.OtoYakuNoHeyaYomikataJitenIroMeiYomikataJitenM
 org.springframework.context.support.VoiceManagerPdfPanel.text=
 org.springframework.context.support.VoiceManagerPdfPanel.html=
 org.springframework.context.support.VoiceManagerPdfPanel.fontSize1=
+org.springframework.context.support.VoiceManagerPdfPanel.fontSize2=
 org.springframework.context.support.VoiceManagerPdfPanel.voiceId=
