Add "org.springframework.context.support.VoiceManagerPdfPanel.pdAnnotationRectangleSize" property in "src/main/resources/configuration.properties" file Add "pdAnnotationRectangleSize" field in "org.springframework.context.support.VoiceManagerPdfPanel" class Add "setPdAnnotationRectangleSize(java.lang.Object)" method in "org.springframework.context.support.VoiceManagerPdfPanel" class Update "/src/main/resources/applicationContext.xml" file Update "actionPerformed(java.awt.event.ActionEvent)" methods in "org.springframework.context.support.VoiceManagerPdfPanel" class

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -158,3 +158,4 @@ org.springframework.context.support.VoiceManagerPdfPanel.html=
 org.springframework.context.support.VoiceManagerPdfPanel.fontSize1=
 org.springframework.context.support.VoiceManagerPdfPanel.fontSize2=
 org.springframework.context.support.VoiceManagerPdfPanel.voiceId=
+org.springframework.context.support.VoiceManagerPdfPanel.pdAnnotationRectangleSize=61.2
