Add "getNumber(java.lang.Object)" and "setSpeechVolume(java.lang.Object)" methods in "org.springframework.context.support.VoiceManagerPdfPanel" class Add "org.springframework.context.support.VoiceManagerPdfPanel.speechVolume" property in "src/main/resources/configuration.properties" file Add "speechVolume" field in "org.springframework.context.support.VoiceManagerPdfPanel" class Update "/src/main/resources/applicationContext.xml" file Update "actionPerformed(java.awt.event.ActionEvent)" and "setPdAnnotationRectangleSize(java.lang.Objecct)" methods in "org.springframework.context.support.VoiceManagerPdfPanel" class

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -159,3 +159,4 @@ org.springframework.context.support.VoiceManagerPdfPanel.fontSize1=
 org.springframework.context.support.VoiceManagerPdfPanel.fontSize2=
 org.springframework.context.support.VoiceManagerPdfPanel.voiceId=
 org.springframework.context.support.VoiceManagerPdfPanel.pdAnnotationRectangleSize=61.2
+org.springframework.context.support.VoiceManagerPdfPanel.speechVolume=100
