--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -158,5 +158,6 @@ org.springframework.context.support.VoiceManagerPdfPanel.html=
 org.springframework.context.support.VoiceManagerPdfPanel.fontSize1=
 org.springframework.context.support.VoiceManagerPdfPanel.fontSize2=
 org.springframework.context.support.VoiceManagerPdfPanel.voiceId=
+org.springframework.context.support.VoiceManagerPdfPanel.imageUrl=
 org.springframework.context.support.VoiceManagerPdfPanel.pdAnnotationRectangleSize=61.2
 org.springframework.context.support.VoiceManagerPdfPanel.speechVolume=100
