Add "getDefaultSpeechSpeedMap()" and "setSpeechSpeedMap(java.lang.String)" methods in "org.springframework.context.support.VoiceManagerPdfPanel" class Add "org.springframework.context.support.VoiceManagerPdfPanel.speechSpeedMap" property in "src/main/resources/configuration.properties" file Add "speechSpeedMap" field in "org.springframework.context.support.VoiceManagerPdfPanel" class Update "/src/main/resources/applicationContext.xml" file Update "actionPerformed(java.awt.event.ActionEvent)" method in "org.springframework.context.support.VoiceManagerPdfPanel" class

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -161,3 +161,4 @@ org.springframework.context.support.VoiceManagerPdfPanel.voiceId=
 org.springframework.context.support.VoiceManagerPdfPanel.imageUrl=
 org.springframework.context.support.VoiceManagerPdfPanel.pdAnnotationRectangleSize=61.2
 org.springframework.context.support.VoiceManagerPdfPanel.speechVolume=100
+org.springframework.context.support.VoiceManagerPdfPanel.speechSpeedMap={"0":"100% Speed","-1":"90% Speed","-2":"80% Speed","-3":"70% Speed","-4":"60% Speed","-5":"50% Speed","-6":"40% Speed","-7":"30% Speed","-8":"20% Speed","-9":"10% Speed"}
