--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -82,6 +82,7 @@ org.springframework.context.support.JlptLevelGui.jmDictUrl=https://www.edrdg.org
 org.apache.commons.lang3.function.OnlineNHKJapanesePronunciationsAccentFailableFunctionImpl.url=https://sakura-paris.org/dict/NHK%E6%97%A5%E6%9C%AC%E8%AA%9E%E7%99%BA%E9%9F%B3%E3%82%A2%E3%82%AF%E3%82%BB%E3%83%B3%E3%83%88%E8%BE%9E%E5%85%B8/exact/
 java.awt.image.BufferedImage.imageType=TYPE_INT_RGB
 org.springframework.context.support.OnlineNHKJapanesePronunciationAccentGui.imageFormatOrders=["png","jpeg","gif"]
+org.springframework.context.support.VoiceManagerPdfPanel.imageFormatOrders=["png","jpeg","gif"]
 org.springframework.beans.config.CustomBeanPostProcessor.defaultCloseOperation=EXIT_ON_CLOSE
 java.awt.Frame.title=
 java.awt.Component.preferredSize.width=
