--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -163,3 +163,4 @@ org.springframework.context.support.VoiceManagerPdfPanel.pdAnnotationRectangleSi
 org.springframework.context.support.VoiceManagerPdfPanel.speechVolume=100
 org.springframework.context.support.VoiceManagerPdfPanel.speechSpeedMap={"0":"100% Speed","-1":"90% Speed","-2":"80% Speed","-3":"70% Speed","-4":"60% Speed","-5":"50% Speed","-6":"40% Speed","-7":"30% Speed","-8":"20% Speed","-9":"10% Speed"}
 org.springframework.context.support.VoiceManagerPdfPanel.imageFormatOrders=["png","jpeg","gif"]
+org.springframework.context.support.VoiceManagerPdfPanel.fontSizeAndUnitMap={"3":"266px","4":"200px","5":"160px","6":"133px","7":"114px","8":"100px","9":"88px","10":"80px","11":"72px","12":"66px","13":"61px","14":"56px","15":"53px","16":"50px","17":"45px","18":"43px","19":"42px","25":"31px","30":"26px","36":"22px"}
