Add "getFields(org.apache.bcel.classfile.JavaClass)","getTextAligns(java.lang.Class)" and "getType(org.apache.bcel.classfile.Field)"  methods in "org.springframework.context.support.Util" class Add "org.jetbrains.kotlin-wrappers:kotlin-css-jvm" dependency Add "toArray(java.util.Collection,java.lang.Object[])" method in "org.springframework.context.support.Util" class Update "afterPropertiesSet()" and "createStyleMap()" methods in "org.springframework.context.support.Util" class

--- a/pom.xml
+++ b/pom.xml
@@ -342,6 +342,18 @@
 		    <artifactId>playwright</artifactId>
 		    <version>1.50.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jetbrains.kotlin-wrappers/kotlin-css-jvm -->
+		<dependency>
+			<groupId>org.jetbrains.kotlin-wrappers</groupId>
+			<artifactId>kotlin-css-jvm</artifactId>
+			<version>2025.2.4</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jetbrains.kotlin</groupId>
+					<artifactId>kotlin-stdlib</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
