Add "org.springframework.context.support.VoiceManagerPdfPanel.textAlign" property in "/src/main/resources/configuration.properties" file Update "/src/main/resources/applicationContext.xml" file

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -165,5 +165,6 @@ org.springframework.context.support.VoiceManagerPdfPanel.speechSpeedMap={"0":"10
 org.springframework.context.support.VoiceManagerPdfPanel.imageFormatOrders=["png","jpeg","gif"]
 org.springframework.context.support.VoiceManagerPdfPanel.audioFormat=mp3
 org.springframework.context.support.VoiceManagerPdfPanel.cssSpecificationUrl=https://www.w3.org/TR/css-text-4/
+org.springframework.context.support.VoiceManagerPdfPanel.textAlign=center
 org.springframework.context.support.VoiceManagerPdfPanel.textAligns=["start","end","left","right","center","justify","match-parent","justify-all"]
 org.springframework.context.support.VoiceManagerPdfPanel.fontSizeAndUnitMap={"3":"266px","4":"200px","5":"160px","6":"133px","7":"114px","8":"100px","9":"88px","10":"80px","11":"72px","12":"66px","13":"61px","14":"56px","15":"53px","16":"50px","17":"45px","18":"43px","19":"42px","20":"40px","21":"40px","23":"34px","24":"33px","25":"31px","26":"30px","28":"29px","29":"27px","30":"26px","31":"25px","36":"22px","37":"21px"}
