Add "org.springframework.context.support.VoiceManagerPdfPanel.browserType" property in "src/main/resources/configuration.properties" file Update "src/main/resources/applicationContext.xml" file

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -168,3 +168,4 @@ org.springframework.context.support.VoiceManagerPdfPanel.cssSpecificationUrl=htt
 org.springframework.context.support.VoiceManagerPdfPanel.textAlign=center
 org.springframework.context.support.VoiceManagerPdfPanel.textAligns=["start","end","left","right","center","justify","match-parent","justify-all"]
 org.springframework.context.support.VoiceManagerPdfPanel.fontSizeAndUnitMap={"2":"410px","3":"266px","4":"200px","5":"160px","6":"133px","7":"114px","8":"100px","9":"88px","10":"80px","11":"72px","12":"66px","13":"61px","14":"56px","15":"53px","16":"50px","17":"45px","18":"43px","19":"42px","20":"40px","21":"40px","23":"34px","24":"33px","25":"31px","26":"30px","28":"29px","29":"27px","30":"26px","31":"25px","36":"22px","37":"21px"}
+org.springframework.context.support.VoiceManagerPdfPanel.browserType=chromium
