--- a/pom.xml
+++ b/pom.xml
@@ -342,6 +342,12 @@
 		    <artifactId>playwright</artifactId>
 		    <version>1.51.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.htmlunit/htmlunit -->
+		<dependency>
+		    <groupId>org.htmlunit</groupId>
+		    <artifactId>htmlunit</artifactId>
+		    <version>4.11.1</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
