Add "org.apache.commons.lang3.function.FuriganaJcinfoFailableFunction.url" property in "src/main/resources/configuration.properties" file Apply rule "Track uses of "TODO" tags" Update "afterPropertiesSet()" method in "org.springframework.context.support.VoiceManagerRubyHtmlPanel" class Update "org.apache.commons.lang3.function.FuriganaJcinfoFailableFunction" class Update "src/main/resources/applicationContext.xml" file

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -173,3 +173,4 @@ org.springframework.context.support.VoiceManagerPdfPanel.fontSizeAndUnitMap={"2"
 org.springframework.context.support.VoiceManagerPdfPanel.browserType=chromium
 org.apache.commons.lang3.function.FuriganaKanjikanaFailableFunction.url=https://kanjikana.com/api/furigana
 org.apache.commons.lang3.function.FuriganaMueckeFailableFunction.url=https://stech.muecke.pw/furigana/cgi-bin
+org.apache.commons.lang3.function.FuriganaJcinfoFailableFunction.url=https://www.jcinfo.net/en/tools/kana
