--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -174,3 +174,4 @@ org.springframework.context.support.VoiceManagerPdfPanel.browserType=chromium
 org.apache.commons.lang3.function.FuriganaKanjikanaFailableFunction.url=https://kanjikana.com/api/furigana
 org.apache.commons.lang3.function.FuriganaMueckeFailableFunction.url=https://stech.muecke.pw/furigana/cgi-bin
 org.apache.commons.lang3.function.FuriganaJcinfoFailableFunction.url=https://www.jcinfo.net/en/tools/kana
+org.springframework.context.support.VoiceManagerOnlineTtsPanel.url=https://open-jtalk.sp.nitech.ac.jp/index.php
