--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -175,3 +175,4 @@ org.apache.commons.lang3.function.FuriganaKanjikanaFailableFunction.url=https://
 org.apache.commons.lang3.function.FuriganaMueckeFailableFunction.url=https://stech.muecke.pw/furigana/cgi-bin
 org.apache.commons.lang3.function.FuriganaJcinfoFailableFunction.url=https://www.jcinfo.net/en/tools/kana
 org.springframework.context.support.VoiceManagerOnlineTtsPanel.url=https://open-jtalk.sp.nitech.ac.jp/index.php
+org.springframework.context.support.SpeechApiOnlineImpl.url=https://open-jtalk.sp.nitech.ac.jp/index.php
