Add "getTitle()" method in "org.springframework.context.support.VoiceManagerImageToPdfPanel" class Implements "org.springframework.context.support.Titled" interface by "org.springframework.context.support.VoiceManagerImageToPdfPanel" class Remove "main(java.lang.String[])" method from "org.springframework.context.support.VoiceManagerImageToPdfPanel" class Update "org.springframework.context.support.VoiceManager.tabOrders" property in "src/main/resources/configuration.properties" file Update "src/main/resources/applicationContext.xml" file

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -14,7 +14,7 @@ org.springframework.context.support.VoiceManager.speechRate=0
 org.springframework.context.support.VoiceManager.speechVolume=100
 org.springframework.context.support.VoiceManager.mp3Tags=["artist","album","title"]
 org.springframework.context.support.VoiceManager.microsoftSpeechObjectLibraryAttributeNames=["Age","AudioFormats","Gender","Language","Name","Vendor","Version"]
-org.springframework.context.support.VoiceManager.tabOrders=["TTS","Online TTS","Import(Single)","Import(Batch)","Export","PDF","HTML","Misc"]
+org.springframework.context.support.VoiceManager.tabOrders=["TTS","Online TTS","Import(Single)","Import(Batch)","Export","PDF","Image To PDF","HTML","Misc"]
 org.springframework.context.support.VoiceManager.useTtsVoice=
 org.springframework.context.support.VoiceManager.overMp3Title=
 org.springframework.context.support.VoiceManager.ordinalPositionAsFileNamePrefix=
