Add "getFontName(java.lang.String,org.springframework.core.env.PropertyResolver,java.util.Map)" and "getFontName(org.apache.pdfbox.pdmodel.font.Standard14Fonts.FontName[],java.lang.String)" methods in "org.springframework.context.support.VoiceManagerImageToPdfPanel" class Add "org.springframework.context.support.VoiceManagerImageToPdfPanel.fontName" property in "src/main/resources/configuration.properties" file Update "afterPropertiesSet()" method in "org.springframework.context.support.VoiceManagerImageToPdfPanel" class

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -172,6 +172,7 @@ org.springframework.context.support.VoiceManagerPdfPanel.textAligns=["start","en
 org.springframework.context.support.VoiceManagerPdfPanel.fontSizeAndUnitMap={"2":"410px","3":"266px","4":"200px","5":"160px","6":"133px","7":"114px","8":"100px","9":"88px","10":"80px","11":"72px","12":"66px","13":"61px","14":"56px","15":"53px","16":"50px","17":"45px","18":"43px","19":"42px","20":"40px","21":"40px","23":"34px","24":"33px","25":"31px","26":"30px","28":"29px","29":"27px","30":"26px","31":"25px","36":"22px","37":"21px"}
 org.springframework.context.support.VoiceManagerPdfPanel.browserType=chromium
 org.springframework.context.support.VoiceManagerPdfPanel.fontName=HELVETICA
+org.springframework.context.support.VoiceManagerImageToPdfPanel.fontName=HELVETICA
 org.apache.commons.lang3.function.FuriganaKanjikanaFailableFunction.url=https://kanjikana.com/api/furigana
 org.apache.commons.lang3.function.FuriganaMueckeFailableFunction.url=https://stech.muecke.pw/furigana/cgi-bin
 org.apache.commons.lang3.function.FuriganaJcinfoFailableFunction.url=https://www.jcinfo.net/en/tools/kana
