Add "org.springframework.context.support.VoiceManagerSpreadsheetToPdfPanel.PDRectangle" property in "src/main/resources/configuration.properties" file Add "propertyResolver" field in "org.springframework.context.support.VoiceManagerSpreadsheetToPdfPanel" class Add "setEnvironment(org.springframework.core.env.Environment)" method in "org.springframework.context.support.VoiceManagerSpreadsheetToPdfPanel" class Apply rule "Track uses of "TODO" tags" Implement "org.springframework.context.EnvironmentAware" interface by "org.springframework.context.support.VoiceManagerSpreadsheetToPdfPanel" class Update "afterPropertiesSet()" method in "org.springframework.context.support.VoiceManagerSpreadsheetToPdfPanel" class

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -175,6 +175,7 @@ org.springframework.context.support.VoiceManagerPdfPanel.fontName=HELVETICA
 org.springframework.context.support.VoiceManagerImageToPdfPanel.fontName=HELVETICA
 org.springframework.context.support.VoiceManagerImageToPdfPanel.fontSize=14
 org.springframework.context.support.VoiceManagerImageToPdfPanel.PDRectangle=A4
+org.springframework.context.support.VoiceManagerSpreadsheetToPdfPanel.PDRectangle=A4
 org.apache.commons.lang3.function.FuriganaKanjikanaFailableFunction.url=https://kanjikana.com/api/furigana
 org.apache.commons.lang3.function.FuriganaMueckeFailableFunction.url=https://stech.muecke.pw/furigana/cgi-bin
 org.apache.commons.lang3.function.FuriganaJcinfoFailableFunction.url=https://www.jcinfo.net/en/tools/kana
